<resources>
    <string name="app_name">dogger</string>
    <string name="Mascotas">Mascotas</string>
    <string name="Agenda">Agenda</string>
    <string name="PaseosDeHoy">Paseos de Hoy</string>

    <string name="title_activity_maps">Map</string>
    <string name="texto_ayuda_nombre_mascota">Nombre de la mascota</string>
    <string name="texto_ayuda_direccion_mascota">Direccion de la mascota</string>
    <string name="titulo_retirar">Retirar:</string>
    <string name="titulo_devolver">Devolver:</string>


    <string-array name="typeUser">
        <item>Dueñio</item>
        <item>Paseador</item>
    </string-array>
</resources>
